--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
 
 	<build>
 	<finalName>vcare</finalName>
-		
+		<defaultGoal>install</defaultGoal>
 		<plugins>
 		 	<plugin>
 				<groupId>org.springframework.boot</groupId>
