--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/project
+spring.datasource.url= jdbc:postgresql://postgres.chgctg8kyatc.us-east-1.rds.amazonaws.com/postgres
 spring.datasource.username= postgres
-spring.datasource.password= Ram1436@
+spring.datasource.password= prakash12345
 spring.datasource.hikari.auto-commit=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
